k8s/development/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - timeline.localhost
        - api.timeline.localhost
  rules:
    - host: api.timeline.localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: api-cluster-ip-service
              servicePort: api-port
    - host: timeline.localhost
        http:
          paths:
            - path: /
              backend:
                serviceName: web-cluster-ip-service
                servicePort: web-port
